--- a/demos/week1.ipynb
+++ b/demos/week1.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "### Package Management"
+    "# Package Management"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Installing `captum`"
+    "## Installing `captum`"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### .yml -> to Conda Environment"
+    "## .yml -> to Conda Environment"
    ]
   },
   {
