instructions for installing env

--- a/demos/week3.ipynb
+++ b/demos/week3.ipynb
@@ -576,7 +576,9 @@
     "* How many linear regressions are run to compute SHAP values across all samples? How large are the input datasets for each of those regressions, and how is it related to `nsamples`?\n",
     "* What is the relationship between the returned attributions $\\varphi$ and the coefficients of our weighted linear regression?\n",
     "* `synth_data` can be viewed as `nsamples` blocks of `N` rows each. How do the blocks differ from one another?\n",
-    "* If we ignore the terms involving the last column of `mask_matrix` (i.e., `mask_matrix[:, -1]`), then how can we interpret the response of the weighted linear regression on line 43?"
+    "* If we ignore the terms involving the last column of `mask_matrix` (i.e., `mask_matrix[:, -1]`), then how can we interpret the response of the weighted linear regression on line 43?\n",
+    "\n",
+    "Hint: You can use Python debugger (`import pdb; pdb.set_trace()`) to pause the code at a specific line and inspect the state of all variables at that point."
    ]
   },
   {
